--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "maisonnet86",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "postbuild": "next-sitemap",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "emailjs-com": "^3.2.0",
-    "next": "16.1.1",
-    "next-sitemap": "^4.2.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "maisonnet86",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"vercel-build": "next build && next-sitemap",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint"
+	},
+	"dependencies": {
+		"emailjs-com": "^3.2.0",
+		"next": "16.1.1",
+		"next-sitemap": "^4.2.3",
+		"react": "19.2.3",
+		"react-dom": "19.2.3"
+	},
+	"devDependencies": {
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "16.1.1",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
